<resources>
    <string name="app_name">E-Scorer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj lub zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Niepoprawny login</string>
    <string name="invalid_password">Hasło musi mieć > 5 znaków</string>
    <string name="login_failed">"Błędne hasło lub login"</string>

    <string name="hint_login">Wprowadź e-mail</string>
    <string name="hint_password">Wprowadź hasło</string>

    <string name="button_login">Zaloguj</string>
    <string name="button_signin">Zarejestruj</string>
    <string name="AppName">E-Scorer</string>
    <string name="text_view_forgot_pwd">Nie pamiętasz hasła?</string>
    <string name="text_view_create_account">Nie masz jeszcze konta?</string>
    <string name="text_view_or">LUB</string>

    <string name="title_activity_main_panel">MainPanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Panel Głowny</string>
    <string name="menu_user_data">Moje dane</string>
    <string name="menu_matches">Moje mecze</string>
    <string name="menu_tools">Ustawienia</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_exit">Wyjście</string>
    <string name="menu_title">Systemowe</string>

    <string name="title_activity_goodbye">GoodbyeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_goodbay">Dozobaczenia :)</string>
    <string name="text_login_google">Zaloguj za pomocą google</string>
</resources>
